# CHDR

./: .gitignore  .gitmodules  CHDR_Version.h.in  CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml  README.md  README.md.in  chdr.hpp  chdr.hpp.in  chdr_version.hpp  chdr_version.hpp.in  stdafx.hpp
CHDR/: Dependency Graph.canvas  DevStack Diagram.canvas  Ideas.md
CHDR/.obsidian/: workspace.json
Pathfinding API/: Threading.md
Pathfinding API/.obsidian/: workspace.json
contrib/LouiEriksson/: Debug.hpp
contrib/ellers-maze-master/example/: main.cpp
contrib/louieriksson/: debug.hpp
docs/: docs.html  index.html  manual.html
docs/api/: annotated.html  annotated_dup.js  bfs_8hpp_source.html  bstar_8hpp_source.html  chdr_8hpp_source.html  classchdr_1_1existence__set-members.html  classchdr_1_1existence__set.html  classchdr_1_1existence__set.js  classchdr_1_1mazes_1_1graph.html  classchdr_1_1mazes_1_1grid-members.html  classchdr_1_1mazes_1_1grid_3_01coord__t_00_01bool_01_4-members.html  classchdr_1_1mazes_1_1grid_3_01coord__t_00_01bool_01_4.html  classchdr_1_1monotonic__pool-members.html  classchdr_1_1monotonic__pool.js  classchdr_1_1polytonic__pool.html  classchdr_1_1polytonic__pool__inherit__graph.map  classchdr_1_1polytonic__pool__inherit__graph.md5  classchdr_1_1solvers_1_1solver.html  classes.html  coord_8hpp_source.html  dfs_8hpp_source.html  dijkstra_8hpp_source.html  dir_000000_000009.html  dir_000000_000010.html  dir_000001_000010.html  dir_000005_000006.html  dir_000005_000009.html  dir_000005_000010.html  dir_000007_000010.html  dir_000008_000000.html  dir_000008_000005.html  dir_000008_000009.html  dir_000008_000010.html  dir_000009_000010.html  dir_0692071b93c98ea03bf846eb22828aa2.html  dir_0692071b93c98ea03bf846eb22828aa2.js  dir_0692071b93c98ea03bf846eb22828aa2_dep.dot  dir_0692071b93c98ea03bf846eb22828aa2_dep.map  dir_0692071b93c98ea03bf846eb22828aa2_dep.md5  dir_0ad255a918b7fba820a1ddafed6fa637.html  (+267 more)
docs/api/docs/: manual.html
docs/api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  defines_2.js  (+63 more)
docs/html/: annotated.html  annotated_dup.js  astar_8hpp_source.html  bnode_8hpp_source.html  classchdr_1_1existence__set.html  classchdr_1_1heap-members.html  classchdr_1_1heap.html  classchdr_1_1heap.js  classchdr_1_1mazes_1_1graph-members.html  classchdr_1_1mazes_1_1grid.html  classchdr_1_1mazes_1_1grid_3_01coord__t_00_01bool_01_4.html  classchdr_1_1mazes_1_1id__node-members.html  classchdr_1_1mazes_1_1id__node.html  classchdr_1_1monotonic__pool.html  classchdr_1_1monotonic__pool__coll__graph.md5  classchdr_1_1monotonic__pool__inherit__graph.map  classchdr_1_1polytonic__pool-members.html  classchdr_1_1queue-members.html  classchdr_1_1queue.html  classchdr_1_1solvers_1_1solver-members.html  classchdr_1_1solvers_1_1solver.js  classchdr_1_1stack-members.html  classchdr_1_1stack.html  classes.html  dir_0692071b93c98ea03bf846eb22828aa2.html  dir_0692071b93c98ea03bf846eb22828aa2.js  dir_0692071b93c98ea03bf846eb22828aa2_dep.map  dir_0ad255a918b7fba820a1ddafed6fa637.html  dir_0ad255a918b7fba820a1ddafed6fa637.js  dir_0ad255a918b7fba820a1ddafed6fa637_dep.map  dir_25175e8773337c65a2c845ecd969d372.html  dir_25175e8773337c65a2c845ecd969d372.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4d98151ebc14e036e8623fd77932f1bb.html  dir_4d98151ebc14e036e8623fd77932f1bb.js  dir_6aece8b0ac0cfc4ca2933706f09f70a1.html  dir_6aece8b0ac0cfc4ca2933706f09f70a1.js  dir_6aece8b0ac0cfc4ca2933706f09f70a1_dep.map  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_821002d4f10779a80d4fb17bc32f21f1.js  (+125 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_3.js  classes_4.js  classes_8.js  classes_a.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_a.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+1 more)
docs/latex/: annotated.tex  files.tex  refman.tex
docs/manual/: getting_started.md  manual.md  roadmap.md
html/: chdr_8hpp_source.html  files.html  md_README.html  pages.html  stdafx_8hpp_source.html
html/search/: all_0.js  all_1.js  all_6.js  pages_0.js  searchdata.js
include/: chdr.hpp  chdr_version.hpp
include/mazes/: graph.hpp  grid.hpp
include/mazes/nodes/: id_node.hpp  weighted_node.hpp
include/solvers/: astar.hpp  best_first.hpp  bfs.hpp  bstar.hpp  dfs.hpp  dijkstra.hpp  eidastar.hpp  eidbest_first.hpp  eidbstar.hpp  eiddfs.hpp  esmgstar.hpp  flood.hpp  floodfill.hpp  fringe.hpp  fstar.hpp  gbest_first.hpp  gbfs.hpp  gdfs.hpp  gjps.hpp  gstar.hpp  idastar.hpp  idbest_first.hpp  idbstar.hpp  iddfs.hpp  jps.hpp  mgstar.hpp  osmastar.hpp  smastar.hpp
include/solvers/base/: bnode.hpp  managed_node.hpp  mutable_node.hpp  solver.hpp  unmanaged_node.hpp
include/types/: append_only_allocator.hpp  circular_queue.hpp  dynamic_pool_allocator.hpp  existence_set.hpp  heap.hpp  queue.hpp  stack_allocator.hpp
include/types/allocators/: block_allocator.hpp  bump_allocator.hpp  dynamic_pool_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp
include/types/containers/: circular_queue.hpp  coord.hpp  existence_set.hpp  heap.hpp  queue.hpp  stack.hpp
include/utils/: heuristics.hpp  intrinsics.hpp  utils.hpp
latex/: files.tex  refman.tex  stdafx_8hpp_source.tex
src/core/: Coord.hpp  Node.hpp  Utils.hpp  chdr.hpp  foo.cpp  stdafx.hpp
src/graphics/: main.cpp
src/test/: Ellers.hpp  RecursiveBacktrack.hpp  main.cpp
test/: main.cpp
tests/: main.cpp
(+2010 files in other folders)
